--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,22 @@
-@import 'bootstrap/scss/bootstrap';
+@import "bootstrap/scss/bootstrap";
+
+.homepage-image-1-row {
+}
+
+.difference-row {
+    background-color: aqua;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+}
+
+.difference-row::before {
+    content: "";
+    position: absolute;
+    top: -100px; /* cât de jos intră arcul */
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background: white; /* culoarea fundalului exterior */
+    border-radius: 0 0 50% 50%;
+}
