added feature partials

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -50,7 +50,7 @@ body {
 ------------------------- */
 
 .featurette-divider {
-    margin: 5rem 0; /* Space out the Bootstrap
+    margin: 3rem 0; /* Space out the Bootstrap
 <hr> more */
 }
 
@@ -73,4 +73,11 @@ body {
     .featurette-heading {
         margin-top: 7rem;
     }
+}
+
+///FEATURES
+.icon-square {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 0.75rem;
 }
